--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.1.2",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
