--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-paystack": "^4.0.1",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.1.2",
